--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div class="gallery">
 									<div class="group span-4-5">
 										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/shireen.png" alt="" /></a>
+										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/shireen_1.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/eunice.png" alt="" /></a>
 										<a href="images/gallery/fulls/02.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 									</div>	
