--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel color5">
-								<div class="intro color5">
-									<h2 class="major">Contact Us</h2>
+							<section class="panel name1">
+								<div class="intro">
+									<h2 class="major name1">Contact Us</h2>
 									<p>6 Pandan Valley <br>#09-606 <br>Singapore 597630</p>
 									<p>Tel: (65) 9698 0324 <br>Tel: (65)9389 7467</p>
 								</div>
 								<div class="inner columns divided">
-									<div class="span-3-25">
+									<div class="span-3-25 name1">
 										<form method="post" action="form.php">
 											<div class="field half">
 												<label for="name">Company / Name</label>
